test/localeModels/nspark/loc-in-locales.good
loc-in-locales.chpl:3: error: unresolved call 'channel.init()'
$CHPL_HOME/modules/standard/IO.chpl:1969: note: this candidate did not match: channel.init(param writing: bool, param kind: iokind, param locking: bool)
loc-in-locales.chpl:3: note: because call does not supply enough arguments
$CHPL_HOME/modules/standard/IO.chpl:1969: note: it is missing a value for formal 'param writing: bool'
$CHPL_HOME/modules/standard/IO.chpl:1976: note: candidates are: channel.init(x: channel)
$CHPL_HOME/modules/standard/IO.chpl:2000: note:                 channel.init(param writing: bool, param kind: iokind, param locking: bool, home: locale, _channel_internal: qio_channel_ptr_t, _readWriteThisFromLocale: locale?)
note: and 1 other candidates, use --print-all-candidates to see them
